src/index.css
body {
  font-family: 'Poppins', sans-serif;
}

nav {
  display: flex;
  padding: 20px 36px;
  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
}

.gray {
  color: #918E9B;
}

.bold {
  font-weight: bold;
}

.nav--logo {
  max-width: 100px;
}

.hero--section{
  display: flex;
  flex-direction: column;
}

.hero--image {
  max-width: 800px;
  align-self: center;
  margin-top: 26px;
}

.hero--header {
  margin-bottom: 16px;
}

.hero--text {
  margin-top: 0;
}

.card {
  width: 275px;
  height: 235px;
  font-size: 12px;
}

.card--image {
  width: 100%;
  border-radius: 9px;
}

.star{
  width: 14px;
  margin-right: 2px;
  margin-top: -2px;
}

.card--stats {
  display: flex;
  align-items: center;
}

